feat: connect CAST search to Chat
